-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.13.2
-
None
-
-
b0114f0dcba2d1709aac47530febc51e5078593e
https://codereview.qt-project.org/c/qt/qt5/+/270872 Merge remote-tracking branch 'origin/5.12' into 5.13
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1566118040
agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp: In member function ‘virtual void QtDataVisualization::Abstract3DRenderer::initializeOpenGL()’: agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: error: no matching function for call to ‘QtDataVisualization::Abstract3DRenderer::connect(QPointer<QOpenGLContext>&, void (QOpenGLContext::*)(), QtDataVisualization::Abstract3DRenderer* const, void (QtDataVisualization::Abstract3DRenderer::*)())’ agent:2019/08/18 10:42:35 build.go:215: this, &Abstract3DRenderer::contextCleanup); agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: note: candidates are: agent:2019/08/18 10:42:35 build.go:215: In file included from /home/qt/work/install/include/QtCore/QObject:1:0, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglcontext.h:48, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglfunctions.h:55, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/QOpenGLFunctions:1, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer_p.h:43, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer.cpp:30: agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:212:36: note: static QMetaObject::Connection QObject::connect(const QObject*, const char*, const QObject*, const char*, Qt::ConnectionType) agent:2019/08/18 10:42:35 build.go:215: static QMetaObject::Connection connect(const QObject *sender, const char *signal, agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:212:36: note: no known conversion for argument 2 from ‘void (QOpenGLContext::*)()’ to ‘const char*’ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:215:36: note: static QMetaObject::Connection QObject::connect(const QObject*, const QMetaMethod&, const QObject*, const QMetaMethod&, Qt::ConnectionType) agent:2019/08/18 10:42:35 build.go:215: static QMetaObject::Connection connect(const QObject *sender, const QMetaMethod &signal, agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:215:36: note: no known conversion for argument 2 from ‘void (QOpenGLContext::*)()’ to ‘const QMetaMethod&’ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:467:32: note: QMetaObject::Connection QObject::connect(const QObject*, const char*, const char*, Qt::ConnectionType) const agent:2019/08/18 10:42:35 build.go:215: inline QMetaObject::Connection QObject::connect(const QObject *asender, const char *asignal, agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:467:32: note: no known conversion for argument 2 from ‘void (QOpenGLContext::*)()’ to ‘const char*’ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:232:43: note: template<class Func1, class Func2> static QMetaObject::Connection QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const typename QtPrivate::FunctionPointer<Func2>::Object*, Func2, Qt::ConnectionType) agent:2019/08/18 10:42:35 build.go:215: static inline QMetaObject::Connection connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:232:43: note: template argument deduction/substitution failed: agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: note: mismatched types ‘const typename QtPrivate::FunctionPointer<Func>::Object*’ and ‘QPointer<QOpenGLContext>’ agent:2019/08/18 10:42:35 build.go:215: this, &Abstract3DRenderer::contextCleanup); agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: In file included from /home/qt/work/install/include/QtCore/QObject:1:0, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglcontext.h:48, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglfunctions.h:55, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/QOpenGLFunctions:1, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer_p.h:43, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer.cpp:30: agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:264:13: note: template<class Func1, class Func2> static typename std::enable_if<((int)(QtPrivate::FunctionPointer<Func2>::ArgumentCount) >= 0), QMetaObject::Connection>::type QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, Func2) agent:2019/08/18 10:42:35 build.go:215: connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, Func2 slot) agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:264:13: note: template argument deduction/substitution failed: agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: note: mismatched types ‘const typename QtPrivate::FunctionPointer<Func>::Object*’ and ‘QPointer<QOpenGLContext>’ agent:2019/08/18 10:42:35 build.go:215: this, &Abstract3DRenderer::contextCleanup); agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: In file included from /home/qt/work/install/include/QtCore/QObject:1:0, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglcontext.h:48, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglfunctions.h:55, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/QOpenGLFunctions:1, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer_p.h:43, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer.cpp:30: agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:273:13: note: template<class Func1, class Func2> static typename std::enable_if<(((int)(QtPrivate::FunctionPointer<Func2>::ArgumentCount) >= 0) && (! QtPrivate::FunctionPointer<Func2>::IsPointerToMemberFunction)), QMetaObject::Connection>::type QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const QObject*, Func2, Qt::ConnectionType) agent:2019/08/18 10:42:35 build.go:215: connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, const QObject *context, Func2 slot, agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:273:13: note: template argument deduction/substitution failed: agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: note: mismatched types ‘const typename QtPrivate::FunctionPointer<Func>::Object*’ and ‘QPointer<QOpenGLContext>’ agent:2019/08/18 10:42:35 build.go:215: this, &Abstract3DRenderer::contextCleanup); agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: In file included from /home/qt/work/install/include/QtCore/QObject:1:0, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglcontext.h:48, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglfunctions.h:55, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/QOpenGLFunctions:1, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer_p.h:43, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer.cpp:30: agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:304:13: note: template<class Func1, class Func2> static typename std::enable_if<(QtPrivate::FunctionPointer<Func2>::ArgumentCount == (-1)), QMetaObject::Connection>::type QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, Func2) agent:2019/08/18 10:42:35 build.go:215: connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, Func2 slot) agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:304:13: note: template argument deduction/substitution failed: agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: note: mismatched types ‘const typename QtPrivate::FunctionPointer<Func>::Object*’ and ‘QPointer<QOpenGLContext>’ agent:2019/08/18 10:42:35 build.go:215: this, &Abstract3DRenderer::contextCleanup); agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: In file included from /home/qt/work/install/include/QtCore/QObject:1:0, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglcontext.h:48, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/qopenglfunctions.h:55, agent:2019/08/18 10:42:35 build.go:215: from /home/qt/work/install/include/QtGui/QOpenGLFunctions:1, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer_p.h:43, agent:2019/08/18 10:42:35 build.go:215: from engine/abstract3drenderer.cpp:30: agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:312:13: note: template<class Func1, class Func2> static typename std::enable_if<(QtPrivate::FunctionPointer<Func2>::ArgumentCount == (-1)), QMetaObject::Connection>::type QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const QObject*, Func2, Qt::ConnectionType) agent:2019/08/18 10:42:35 build.go:215: connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, const QObject *context, Func2 slot, agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:35 build.go:215: /home/qt/work/install/include/QtCore/qobject.h:312:13: note: template argument deduction/substitution failed: agent:2019/08/18 10:42:35 build.go:215: engine/abstract3drenderer.cpp:238:63: note: mismatched types ‘const typename QtPrivate::FunctionPointer<Func>::Object*’ and ‘QPointer<QOpenGLContext>’ agent:2019/08/18 10:42:35 build.go:215: this, &Abstract3DRenderer::contextCleanup); agent:2019/08/18 10:42:35 build.go:215: ^ agent:2019/08/18 10:42:36 build.go:215: Makefile:16660: recipe for target '.obj/abstract3drenderer.o' failed agent:2019/08/18 10:42:36 build.go:215: make[2]: *** [.obj/abstract3drenderer.o] Error 1
For Gerrit Dashboard: QTBUG-77730 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
271216,2 | Fix GCC 4.8 build of abstract3drenderer | 5.13 | qt/qtdatavis3d | Status: MERGED | +2 | 0 |