Fix GCC 4.8 build of abstract3drenderer

Task-number: QTBUG-77730
Change-Id: I827d727b103a9923a8b82163bfa4f77c81c0906b
Reviewed-by: Liang Qi <liang.qi@qt.io>